<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/color_white"
    android:id="@+id/slide_menu_constraintLayout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/main_layout"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/avatar_imv"
                android:layout_margin="@dimen/dimen_20"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/icon_avatar_logout">
            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_help"
                android:textColor="@color/color_333333"
                android:id="@+id/login_tv">
            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_20"
                android:id="@+id/login_btn"
                android:text="@string/login_now"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/selector_login_btn_background">
            </Button>

            <!--后续再开发-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lll_layout"
                android:orientation="horizontal">
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:id="@+id/login_layout_div"
                android:background="#dddddd"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </View>

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/slide_left_bottom_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:id="@+id/bottom_div"
            android:background="#dddddd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </View>

        <!--均分布局-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/night_mode_layout"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.33"
            app:layout_constraintTop_toBottomOf="@+id/bottom_div"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_night_mode"
                android:scaleType="center"
                android:id="@+id/night_mode_imv">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/night_mode_tv"
                android:text="@string/night_mode">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/setting_layout"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.33"
            app:layout_constraintTop_toBottomOf="@+id/bottom_div"
            app:layout_constraintStart_toEndOf="@id/night_mode_layout"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_setting"
                android:scaleType="center"
                android:id="@+id/setting_imv">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_tv"
                android:text="@string/setting">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/exit_layout"
            android:gravity="center"
            app:layout_constrainedWidth="true"
            app:layout_constraintWidth_percent="0.33"
            app:layout_constraintTop_toBottomOf="@+id/bottom_div"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/setting_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_exit"
                android:scaleType="center"
                android:id="@+id/exit_imv">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exit_tv"
                android:text="@string/exit">
            </TextView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>